# fhf-datafangst

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  check.yml  update.yml
dockerfiles/fhf-datafangst-client/: Dockerfile  nginx.conf
dockerfiles/fhf-datafangst-fuel-registration/: Dockerfile  nginx.conf
fhf-datafangst-client/: .dockerignore  .env  .env.development  .env.production  .eslintignore  .eslintrc.json  .prettierrc  README.md  config-overrides.js  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
fhf-datafangst-client/fft-wasm/: Cargo.toml  README.md
fhf-datafangst-client/fft-wasm/src/: lib.rs
fhf-datafangst-client/public/: index.html  manifest.json
fhf-datafangst-client/src/: index.css  index.tsx  main.tsx  reportWebVitals.ts
fhf-datafangst-fuel-registration/: .env.development  .env.production  .prettierignore  config-overrides.js  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json
fhf-datafangst-fuel-registration/public/: index.html  manifest.json
fhf-datafangst-fuel-registration/src/: index.tsx  main.tsx
scripts/python/: Pipfile  catch_data_downloader.py  data_configuration.py  days_to_month_transformer.py  exampleConfig.json  netcdf_to_csv_downscaler.py  wind_data_downloader.py
scripts/sql/: fangstanalyse_schema.sql  generate_postgres_9_db_schema.sql  monthly_aggregated_catch_data_upsert_trigger.sql  raw_catch_data_upsert_trigger.sql  sp_aggregate_monthly_catch_data.sql  weather_data_upsert_trigger.sql  (+3 more)
(+408 files in other folders)
