[package]
name = "fft-wasm"
version = "0.1.0"
authors = ["Markus Bergum Hilbertsen <markus@orcalabs.no>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

realfft = "3.3.0"
js-sys = "0.3.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
